tests/error/wasm_errors/wasm_fn_without_module2.py
from guppylang import guppy
from guppylang_internals.decorator import wasm

@guppy.enum
class Foo:
    Var = {}
    @wasm
    def bar(self: "Foo") -> None: ...


@guppy
def main() -> None:
    mod = Foo.Var()
    mod.bar()
    mod.discard()
    return

main.compile()
