tests/error/wasm_errors/wasm_fn_without_module2.err
Error: WASM signature error (at $FILE:8:4)
  | 
6 |     Var = {}
7 |     @wasm
8 |     def bar(self: "Foo") -> None: ...
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ First argument to WASM function should be a WASM module.

Note:
  | 
7 |     @wasm
8 |     def bar(self: "Foo") -> None: ...
  |     --------------------------------- Found `Foo` instead.

Guppy compilation failed due to 1 previous error
